welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: '(' expected but identifier found.
     if BB >= 3 {
        ^Poucet:12: error: illegal start of simple expression
    }
    ^